2006-06-05  Masao Mutoh  <mutoh@highway.ne.jp>

  * src/rbgobj_closure.c, glib2.def: Works on Windows again.

2006-05-29  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobjvalue.c: Use g_type_set_qdata and g_type_get_qdata instead
	of ruby's hash table.

	* src/rbgobj_singal.c: new function gobj_sig_connect_impl
	extracted from gobj_sig_connect and gobj_sig_connect_after.

	* src/rbgobj_signal.c: Make eNoSignal and _signal_list to be static.

2006-05-27  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c: Remove GLib::Object#singleton_method_added.
	Now we can't define signal handlers by defining singleton methods.

	* src/rbgobj_typeinstance.c (each_cinfo): Fix to traverse ancestor's cinfo.

	* src/rbgobj_paramspecs.c, src/rbgobj_value.c: Use RVAL2GOBJ instead of
	rbgobj_param_spec_get_struct().
	* src/rbgobj_param.c: Rename rbgobj_param_spec_get_struct() to
	rbgobj_get_param_spec().

	* src/rbgobject.c: Remove rbgobj_ruby_object_from_instance_if_exist
	and add rbgobj_ruby_object_from_instance2.
	* src/rbgobject.c: Remove rbgobj_get_value_from_gobject_if_exist
	and extend rbgobj_get_value_from_gobject by adding one argument.
	* src/rbgobj_param.c: Remove rbgobj_get_value_from_param_spec_if_exist
	and extend rbgobj_get_value_from_param_spec by adding one argument.
	* src/rbgobject.h, src/global.h, src/glib2.def,
	src/rbgobj_typeinstance.c: Follow above changes.

	* src/rbgobj_typeinterface.c: New file.
	* src/rbgobj_type.c, src/rbgobject.c: separate some interface stuffs
	into src/rbgobj_typeinterface.c.

	* src/rbgobj_typeinstance.c: New file.
	* src/rbgobj_type.c, src/rbgobject.c, rbgobj_param.c: separate
	some cInstantiatable stuffs into rbgobj_typeinstance.c.
	* src/global.h: ditto.

	* src/rbgobj_closure.c: Revert changes of 2006-04-15.
	We shouldn't use Data_Make_Struct in rclosure_marshal since
	this function could be called from arbitrary threads.
	* src/rbgobj_closure.c: simplify codes a bit.
